1) fixed cursor of empty_arrow_td 2) changed RTE frame width (trying to align it with input fields 3) appended background of arrow_td
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@16651 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -1756,7 +1756,7 @@ table.printFB {
 #loginForm td { font-weight: bold; }
 .redeem { width: auto; background-color: #ffffff; color: #2B0764; border: 1px solid #cccccc; padding: 5 5 5 5; }
 
-.rte { margin-bottom: 7px; background-color: &[PrimaryColor_4];; border: 2px solid &[PrimaryColor_1];; padding:0; width: 100%; height: 107px;  }
+.rte { margin-bottom: 7px; background-color: &[PrimaryColor_4];; border: 2px solid &[PrimaryColor_1];; padding:0; height: 107px; width: 99.3%; /*trying to align with inputs*/ }
 .rte_body { overflow: hidden; color: &[PrimaryColor_4_text];; font-family :Helvetica, arial; fontSize : 16px; margin:5; }
 .rte_body object { display: block; background: #000000; }
 
@@ -1938,8 +1938,9 @@ div .panel_block #dataEntry .iphone_field { margin-left: 10px; }
 
 /*.rounded_rect_tbl a { color: &[PrimaryColor_4_text];; }*/
 
-.arrow_td, .arrow_td_empty { padding-right: 4px; min-width: 10px; font-size: 18px !important; font-weight: bold; text-align:center; cursor: pointer; }
-/*.arrow_td { background-color: &[PrimaryColor_1];;}*/
+.arrow_td, .arrow_td_empty { padding-right: 4px; min-width: 10px; font-size: 18px !important; font-weight: bold; text-align:center; }
+.arrow_td { cursor: pointer; }
+.arrow_td { background-color: &[PrimaryColor_1];;}
 
 .param_tr .label_td { white-space: nowrap; position: relative; } 
 .param_tr .field_comment, #mkresource .field_comment { height: 55px !important; }
